@@ -10,6 +10,9 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import java.util.Collections;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import java.util.List;
+
 
 import java.io.IOException;
 
@@ -22,23 +25,25 @@ public class JwtFilter extends OncePerRequestFilter {
         this.jwtUtil = jwtUtil;
     }
 
-    @Override
+   @Override
 protected void doFilterInternal(HttpServletRequest request,
-                               HttpServletResponse response,
-                               FilterChain filterChain)
+                                HttpServletResponse response,
+                                FilterChain filterChain)
         throws ServletException, IOException {
 
     String authHeader = request.getHeader("Authorization");
 
     if (authHeader != null && authHeader.startsWith("Bearer ")) {
-
         String token = authHeader.substring(7);
-
         try {
             String email = jwtUtil.extractEmail(token);
-            
+            String role = jwtUtil.extractRole(token);  // ← extract role
+            SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + role);
+
             UsernamePasswordAuthenticationToken authentication =
-                    new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList());
+                new UsernamePasswordAuthenticationToken(
+                    email, null, List.of(authority)  // ← List.of(authority)
+                );
 
             SecurityContextHolder.getContext().setAuthentication(authentication);
 
